# raft-ws

./: raft-ws.cabal  static
src/: ClientTypes.hs  Main.hs  TestStore.hs
