name:          raft-ws
version:       0.1.0.0
license:       BSD3
license-file:  LICENSE
author:        Jacob Stanley
maintainer:    jacob@stanley.io
category:      Network
build-type:    Simple
cabal-version: >= 1.10

executable raft-ws
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010

  build-depends:
      base >= 4.8 && < 4.9
    , bytestring
    , containers
    , free
    , http-types
    , mtl
    , raft
    , system-filepath
    , transformers
    , wai
    , wai-app-static
    , wai-websockets
    , warp
    , websockets
